# jwtsample-drf

./: .env.dist  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  App.scss
frontend/src/endpoints/: create_post.jsx  home.jsx  login.jsx  posts.jsx  registration.jsx
jwtapp/: custom_permissions.py  models.py  serializers.py  views.py
jwtapp/migrations/: 0001_initial.py  0002_posts.py  0003_alter_users_bio_link.py
